--- a/src/Entete.scss
+++ b/src/Entete.scss
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #444;
+    background-color: black;
     color: white;
     img {
         border-radius: 50%;
