--- a/src/Signet.scss
+++ b/src/Signet.scss
@@ -13,7 +13,7 @@
         text-align: left;
     }
     &:nth-of-type(even) .titre {
-        background-color: lightcoral;
+        // background-color: lightcoral;
     }
     &__divImg {
         display: flex;
