--- a/src/Entete.scss
+++ b/src/Entete.scss
@@ -6,6 +6,7 @@
     justify-content: space-between;
     background-color: black;
     color: white;
+    z-index: 2;
     img {
         border-radius: 50%;
         margin-left: 5px;
