--- a/src/PiedPage.scss
+++ b/src/PiedPage.scss
@@ -1,8 +1,33 @@
 .PiedPage {
+    position: relative;
     margin-top: 5rem;
-    padding: 1rem 2rem;
+    padding: 0rem 2rem;
     border-top: 5px solid #999;
-    font-size: 1rem;
     font-style: italic;
-    text-align: right;
+    text-align: left;
+    h1 {
+        font-size: 1rem;
+        // margin-top: 1rem;
+    }
+}
+
+.btnPlus {
+    color: white;
+    z-index: 1;
+    background-color: black;
+    box-shadow: 5px 5px 15px 2px rgba(0, 0, 0, 0.75);
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    & svg {
+        cursor: pointer;
+    }
+    // Postion
+    position: absolute;
+    bottom: 30px;
+    right: 30px;
 }
