--- a/src/Signet.scss
+++ b/src/Signet.scss
@@ -4,7 +4,6 @@
     // padding: 0.5rem;
     // background-color: ivory;
     box-shadow: 5px 5px 15px 2px rgba(80, 78, 77, 0.75);
-    width: 300px;
     .titre {
         font-size: 1.25rem;
         font-weight: bold;
@@ -52,4 +51,9 @@
             right: 15px;
         }
     }
+    @media (max-width:575px) {
+        width: 90%;
+    }
+    @media (min-width:576px) and (max-width:991px) {}
+    @media (min-width:992px) {}
 }
