plus de signets

--- a/src/ListeSignets.scss
+++ b/src/ListeSignets.scss
@@ -19,10 +19,10 @@
             justify-content: center;
         }
         @media (min-width: 576px) and (max-width: 991px) {
-            justify-content: space-between;
+            justify-content: space-around;
         }
         @media (min-width: 992px) {
-            justify-content: space-between;
+            justify-content: space-around;
         }
     }
 }
