--- a/src/ListeSignets.scss
+++ b/src/ListeSignets.scss
@@ -1,28 +1,17 @@
 .ListeSignets {
-    @media (max-width: 575px) {
-        background-color: blue;
-    }
-    @media (min-width:576px) and (max-width:991px) {
-        background-color: red;
-    }
-    @media (min-width:992px) {
-        background-color: gold;
-    }
     padding: 2rem;
     h2 {
         font-size: 2rem;
     }
     .Signets {
+        margin: 0 auto;
         display: flex;
         flex-wrap: wrap;
         @media (max-width: 575px) {
             justify-content: center;
         }
-        @media (min-width: 576px) and (max-width: 991px) {
-            justify-content: space-around;
-        }
-        @media (min-width: 992px) {
-            justify-content: space-around;
+        @media (min-width: 576px) {
+            justify-content: center;
         }
     }
 }
