--- a/src/Signet.scss
+++ b/src/Signet.scss
@@ -8,9 +8,9 @@
         font-size: 1.25rem;
         font-weight: bold;
         color: ivory;
-        background-color: gold;
         text-align: left;
         border-top: 3px solid black;
+        height: auto;
     }
     &:nth-of-type(even) .titre {
         // background-color: lightcoral;
@@ -21,11 +21,17 @@
     }
     img {
         // width: 240px;
-        height: 170px;
-        // width: 100%;
+        // height: 170px;
+        /***********/
+        width: 100%;
+        height: auto;
     }
     div {
         overflow: hidden;
+    }
+    h1,
+    h6 {
+        margin-left: 10px;
     }
     .btnSig {
         color: white;
@@ -52,8 +58,13 @@
         }
     }
     @media (max-width:575px) {
-        width: 90%;
+        // width: 90%;
+        width: 70vw;
     }
-    @media (min-width:576px) and (max-width:991px) {}
-    @media (min-width:992px) {}
+    @media (min-width:576px) and (max-width:991px) {
+        width: 45%;
+    }
+    @media (min-width:992px) {
+        width: 23%;
+    }
 }
