--- a/src/PiedPage.scss
+++ b/src/PiedPage.scss
@@ -27,7 +27,7 @@
         cursor: pointer;
     }
     // Postion
-    position: absolute;
+    position: fixed;
     bottom: 30px;
     right: 30px;
 }
