--- a/src/Entete.scss
+++ b/src/Entete.scss
@@ -10,6 +10,7 @@
     img {
         border-radius: 50%;
         margin-left: 5px;
+        cursor: pointer;
     }
     h1 {
         font-size: 1.4rem;
@@ -23,5 +24,27 @@
             padding-left: 0.75rem;
             font-size: 0.9rem;
         }
+    }
+    .option-user {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: rgb(124, 124, 124);
+        position: absolute;
+        top: 5.5rem;
+        right: 25px;
+        overflow: hidden;
+        height: 0;
+        width: 40px;
+        transition: .4s cubic-bezier(.5, 0, .5, 1.7);
+    }
+    #cc-option-user {
+        display: none;
+    }
+    #cc-option-user:checked~.option-user {
+        height: 4*30px;
+    }
+    svg {
+        cursor: pointer;
     }
 }
