--- a/src/Signet.scss
+++ b/src/Signet.scss
@@ -25,6 +25,11 @@
         /***********/
         width: 100%;
         height: auto;
+        transition: 1s ease;
+        &:hover {
+            opacity: 0.7;
+            transform: scale(1.2);
+        }
     }
     div {
         overflow: hidden;
@@ -38,8 +43,8 @@
         z-index: 1;
         position: absolute;
         background-color: hsla(0, 0%, 0%, 0.3);
-        width: 35px;
-        height: 35px;
+        width: 40px;
+        height: 40px;
         border-radius: 50%;
         overflow: hidden;
         display: flex;
